@@ -37,10 +37,10 @@
    '("`?\\<[A-Z][A-Za-z0-9_\']*\\>" nil MidnightBlue)
 ;definition
    (list (concat
-          "\\<\\(a\\(nd\\|s\\)\\|c\\(onstraint\\|lass\\)"
+          "\\<\\(a\\(nd\\|s\\)\\|def\\|c\\(onstraint\\|lass\\)"
           "\\|ex\\(ception\\|ternal\\)\\|fun\\(ct\\(ion\\|or\\)\\)?"
           "\\|in\\(herit\\)?\\|let\\|m\\(ethod\\|utable\\|odule\\)"
-          "\\|of\\|p\\(arser\\|rivate\\)\\|rec\\|type"
+          "\\|o\\(f\\|r\\)\\|p\\(arser\\|rivate\\)\\|rec\\|type"
           "\\|v\\(al\\|irtual\\)\\)\\>")
          nil 'ForestGreen)
 ;blocking
@@ -48,7 +48,7 @@
 ;control
    (list (concat
           "\\<\\(do\\(ne\\|wnto\\)?\\|else\\|for\\|i\\(f\\|gnore\\)"
-          "\\|lazy\\|match\\|new\\|or\\|t\\(hen\\|o\\|ry\\)"
+          "\\|lazy\\|match\\|new\\|spawn\\|t\\(hen\\|o\\|ry\\)"
           "\\|w\\(h\\(en\\|ile\\)\\|ith\\)\\)\\>"
           "\\|\|\\|->\\|&\\|#")
          nil 'keyword)
