@@ -1,3 +1,5 @@
+- Started a bit of emacs mode.
+
 - Added module 'Proc' in the standard library.
 
 - Handle type constraints in join-patterns (slight change
